# zebedee-rust

./: .gitignore  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: pipeline.yml
src/: charges.rs  custom_deserializer.rs  errors.rs  gamertag.rs  internal_transfer.rs  keysend.rs  lib.rs  ln_address.rs  login_with_zbd.rs  models.rs  payments.rs  utilities.rs  wallet.rs  withdrawal_request.rs
src/charges/: tests.rs  types.rs
src/email/: tests.rs  types.rs
src/gamertag/: tests.rs  types.rs
src/internal_transfer/: mod.rs  tests.rs  types.rs
src/keysend/: tests.rs  types.rs
src/ln_address/: tests.rs  types.rs
src/login_with_zbd/: tests.rs  types.rs
src/payments/: tests.rs  types.rs
src/utilities/: tests.rs  types.rs
src/voucher/: types.rs
src/wallet/: tests.rs  types.rs
src/withdrawal_request/: tests.rs  types.rs
