[package]
name = "zebedee-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
http = "0.2"
validator = { version = "0.16", features = ["derive"] }
uuid = "1.2"
base64-url = "1.4"
rand = "0.8"
sha2 = "0.10"
