[package]
name = "zebedee-rust"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Utility crate for ZEBEDEE Public API using reqwest"
readme = "README.md"
documentation = "https://docs.rs/zebedee-rust"
repository = "https://github.com/miketwenty1/zebedee-rust/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
http = "0.2"
validator = { version = "0.16", features = ["derive"] }
uuid = "1.2"
base64-url = "1.4"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
